# stl-additions

./: CMakeLists.txt  README.md  main.cpp
include/: stl-algorithms.h  xrange.h  zip.h
tests/: CMakeLists.txt  test_algorithms.cpp  test_xrange.cpp  test_zip.cpp
